# bb-tetris

./: .gitignore  CMakeLists.txt  Game.c  Game.h  Makefile  README.md  delayed_execute.sh  game.c  game.h  graphics.c  graphics.h  main.c  ranking.c  ranking.h  record.c  record.h  utils.h
scene/: marathon.c  marathon.h  title.c  title.h
tetris/: game.c  game.h  tetrimino.c  tetrimino.h
view/: 40line.c  40line.h  components.c  components.h  help.c  help.h  marathon.c  marathon.h  ranking.c  ranking.h  result_marathon.c  title.c  title.h  ultra.c  ultra.h
views/: marathon.c  marathon.h  result_marathon.c  result_marathon.h  title.c  title.h
